Make sure canvas covers entire screen

--- a/css/index.css
+++ b/css/index.css
@@ -143,6 +143,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 #canvas {
     position: absolute;
+    min-width: 100vw;
+    min-height: 100vh;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
